Fixed selected task appearance in dark mode

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
   text-align: center;
 }
 
-.selected-task {
+#selected-task {
   transform: scale(1.3, 1.3);
   background: rgb(189, 53, 53);
   color: white;
